--- a/ionic-test/www/templates/page.html
+++ b/ionic-test/www/templates/page.html
@@ -7,21 +7,10 @@
                 <i class="icon ion-search placeholder-icon"></i>
                 <input type="search" placeholder="" ng-model="busca2">
             </label>
-            <a class="button button-stable button-block button button-positive" ng-click="buscaAPI(busca2)">Search!</a>
-            <!--<ion-item class="item-thumbnail-left" ng-repeat="bleh in fantasma | filter:busca2" ng-if="bleh.podeservisto">-->
-            <!--    <img>-->
-            <!--    <h2>{{bleh.nome}}</h2>-->
-            <!--    <p>{{bleh.tipo}}</p>-->
-            <!--</ion-item>-->
+            <a class="button button-stable button-block button button-positive" ng-click="buscaAPI(busca2)">Search!</
         </ion-list>
-        <!--<p>{{ busca2 }}</p>
-        <a class="button button-stable button-block button button-royal" ng-click="alert()">Try me!</a>
-        Coloque seu nome:
-            <input type="text" ng-model="sometext" ng-show = true />
-            <h1>Oi, {{ sometext }}</h1>-->
-        <div id ="paragrafo" ng-repeat="d in data">
+        <div ng-repeat="d in data | filter:busca2">
         <h2>{{d.name}}</h2>
-            <a class="button button-stable button-block button button-positive" >{{d.languages}}</a>
             <p>Capital: {{d.capital}}</p>
             <p>Continente: {{d.region}}</p>
             <p>População: {{d.population}}</p>
