--- a/ionic-test/www/templates/cameraTabDefaultPage.html
+++ b/ionic-test/www/templates/cameraTabDefaultPage.html
@@ -1,4 +1,4 @@
-<ion-view title="Camera Tab Default Page">
+<ion-view title="CameraTab Default Page">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <div class="button-bar">
             <button class="button button-stable button-block " ng-click="alertbleh()">1</button>
@@ -7,13 +7,13 @@
         </div>
         <a href="#/page1" class="button button-stable button-block ">Tap me!</a>
         <form class="list">
-            <ion-toggle toggle-class="toggle-calm" ng-checked="true">Toggle</ion-toggle>
-            <ion-radio>{{animaisMarinhos}}</ion-radio>
-            <label class="item item-input">
-                <span class="input-label">Input</span>
-                <input type="text" placeholder="{{animaisMarinhos}}">
+            <!--<ion-toggle toggle-class="toggle-calm" ng-checked="true">Toggle</ion-toggle> -->
+            <!--<ion-radio>{{animaisMarinhos}}</ion-radio> -->
+            <!--<label class="item item-input"> -->
+                <!--<span class="input-label">Input</span> -->
+                <!--<input type="text" placeholder="{{animaisMarinhos}}"> -->
             </label>
-            <ion-item>Item</ion-item>
+            <!--<ion-item>Item</ion-item> -->
         </form>
     </ion-content>
 </ion-view>
