form sendo postado com a tecla enter

--- a/ionic-test/www/templates/page.html
+++ b/ionic-test/www/templates/page.html
@@ -18,16 +18,16 @@
             <!--    <p>{{bleh.tipo}}</p>-->
             <!--</ion-item>-->
             <div class="list">
-
-                <div class="item item-input-inset">
-                    <label class="item-input-wrapper">
-                        <input type="text" placeholder="Busca País" ng-model="busca2">
-                    </label>
-                    <button class="button button-small" ng-click="buscaAPI(busca2)">
-                        Go!
-                    </button>
-                </div>
-
+                <form ng-submit="buscaAPI(busca2)">
+                    <div class="item item-input-inset">
+                        <label class="item-input-wrapper">
+                            <input type="text" placeholder="Busca País" ng-model="busca2">
+                        </label>
+                        <button class="button button-small" ng-click="buscaAPI(busca2)">
+                            Go!
+                        </button>   
+                    </div>
+                </form>
             </div>
 
         </ion-list>
